--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
 
       <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
         Create connections with your users as you engage in genuine discussion.</p>
-      <button class="btn">Register</button>
+      <button class="btn-reg">Register</button>
+      <div class="btn-container mobile">
+        <button class="btn"><i class="fa-brands fa-facebook-f"></i></button>
+        <button class="btn"><i class="fa-brands fa-twitter"></i></button>
+        <button class="btn"><i class="fa-brands fa-instagram"></i></button>
+      </div>
+      <div class="btn-container desktop">
+        <button class="btn"><i class="fa-brands fa-facebook-f fa-xl"></i></button>
+        <button class="btn"><i class="fa-brands fa-twitter fa-xl"></i></button>
+        <button class="btn"><i class="fa-brands fa-instagram fa-xl"></i></button>
+      </div>
     </section>
   </div>
-  <div class="btn-container mobile">
-    <button class="btn"><i class="fa-brands fa-facebook-f"></i></button>
-    <button class="btn"><i class="fa-brands fa-twitter"></i></button>
-    <button class="btn"><i class="fa-brands fa-instagram"></i></button>
-  </div>
-  <div class="btn-container desktop">
-    <button class="btn"><i class="fa-brands fa-facebook-f fa-xl"></i></button>
-    <button class="btn"><i class="fa-brands fa-twitter fa-xl"></i></button>
-    <button class="btn"><i class="fa-brands fa-instagram fa-xl"></i></button>
-  </div>
+
 </body>
 
 </html>
